feat: enhance source code lookup tool with response depth and improved descriptions